--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{
-  "name": "koishi-plugin-manager-all",
-  "description": "manager-all",
-  "version": "0.0.1",
+  {
+    "name": "koishi-plugin-manager-all",
+    "description": "一个功能完整的 Koishi 群管机器人插件，支持白名单管理、关键词过滤和消息监控",
+    "version": "1.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,14 +9,24 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
-  "keywords": [
-    "chatbot",
-    "koishi",
-    "plugin"
-  ],
-  "devDependencies": {},
-  "peerDependencies": {
-    "koishi": "^4.18.7"
-  }
+      "keywords": [
+      "koishi",
+      "koishi-plugin",
+      "chatbot",
+      "群管",
+      "群管理",
+      "白名单",
+      "关键词过滤",
+      "消息监控",
+      "onebot",
+      "qq-bot"
+    ],
+      "peerDependencies": {
+      "koishi": "^4.18.7"
+    },
+    "koishi": {
+      "description": {
+        "zh": "一个功能完整的群管机器人插件，支持白名单管理、关键词过滤和消息监控"
+      }
+    }
 }
