--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "koishi-plugin-manager-all",
-  "description": "一个功能完整的 Koishi 群管机器人插件，支持白名单管理、关键词过滤和消息监控",
-  "version": "2.3.2",
+  "name": "koishi-plugin-group-master",
+  "description": "一个功能完整的 Koishi 群管机器人插件，支持严格姓名验证、白名单管理、关键词过滤和消息监控",
+  "version": "3.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch"
+  },
   "license": "MIT",
   "keywords": [
     "koishi",
@@ -15,9 +19,11 @@
     "chatbot",
     "群管",
     "群管理",
+    "姓名验证",
     "白名单",
     "关键词过滤",
     "消息监控",
+    "group-master",
     "onebot",
     "qq-bot"
   ],
@@ -26,7 +32,7 @@
   },
   "koishi": {
     "description": {
-      "zh": "一个功能完整的群管机器人插件，支持白名单管理、关键词过滤和消息监控"
+      "zh": "一个功能完整的群管机器人插件，支持严格姓名验证、白名单管理、关键词过滤和消息监控"
     }
   }
 }
