--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,28 @@
     "rootDir": "src",
     "outDir": "lib",
     "target": "es2022",
-    "module": "esnext",
+    "module": "commonjs",
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": false,
     "composite": true,
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "strict": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@satorijs/element",
     "types": [
-      "node",
-      "yml-register/types"
-    ]
+      "node"
+    ],
+    "resolveJsonModule": true
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "lib",
+    "node_modules"
   ]
 }
